--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -6,3 +6,5 @@ Screenshot 2024-07-25 191415.png=@Screenshot 2024-07-25 191415,0
 Screenshot 2024-07-25 191906.png=@Screenshot 2024-07-25 191906,0
 Screenshot 2024-05-20 233831.png=@Screenshot 2024-05-20 233831,0
 Screenshot 2024-07-25 204118.png=@Screenshot 2024-07-25 204118,0
+Screenshot 2024-08-30 172929.png=@Screenshot 2024-08-30 172929,0
+Screenshot 2024-08-30 173105.png=@Screenshot 2024-08-30 173105,0
