--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -8,3 +8,6 @@ Screenshot 2024-05-20 233831.png=@Screenshot 2024-05-20 233831,0
 Screenshot 2024-07-25 204118.png=@Screenshot 2024-07-25 204118,0
 Screenshot 2024-08-30 172929.png=@Screenshot 2024-08-30 172929,0
 Screenshot 2024-08-30 173105.png=@Screenshot 2024-08-30 173105,0
+Screenshot 2024-11-16 145200.png=@Screenshot 2024-11-16 145200,0
+Screenshot 2024-11-16 150756.png=@Screenshot 2024-11-16 150756,0
+Screenshot 2024-11-16 151448.png=@Screenshot 2024-11-16 151448,0
